fixed overflow issue

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -20,6 +20,7 @@ body {
   font-weight: 300;
   line-height: 1.6rem;
   background-color: $color-base;
+  overflow-x: hidden;
 }
 
 section {
